# keystr

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile
.github/workflows/: dioxus.yml
crates/client/: Cargo.toml  README.md
crates/client/examples/: passkey_plog.rs  wasm_usage.rs
crates/client/src/: cbor_utils.rs  config.rs  error.rs  key_manager.rs  lib.rs  passkey_wallet.rs  webauthn.rs
crates/client/src/native/: key_manager.rs  mod.rs
crates/client/src/web/: error.rs  mod.rs  passkey_wallet.rs
examples/static/: Cargo.toml  Dioxus.toml  README.md  justfile  tailwind.css
examples/static/src/: main.rs
