[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.package]
rust-version = "1.85"

[workspace.dependencies]
tracing = "0.1"
thiserror = "2.0"
getrandom = "0.3"
keystr-client = { path = "./crates/client" }
bs = { git = "https://github.com/cryptidtech/bs" }
multicodec = { git = "https://github.com/cryptidtech/bs" }
multikey = { git = "https://github.com/cryptidtech/bs" }
multicid = { git = "https://github.com/cryptidtech/bs" }
multisig = { git = "https://github.com/cryptidtech/bs" }
multihash = { git = "https://github.com/cryptidtech/bs" }
provenance-log = { git = "https://github.com/cryptidtech/bs" }
bs-traits = { git = "https://github.com/cryptidtech/bs" }
