[package]
name = "keystr-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
thiserror.workspace = true
bs = { path = "../../../../clones/bs/crates/bs" }
bs-traits = { path = "../../../../clones/bs/crates/bs-traits" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
log = "0.4.21"
base64 = "0.22.1"

# optional for web feature only 
wasm-bindgen = { version = "0.2.92", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
js-sys = { version = "0.3.69", optional = true }
web-sys = { version = "0.3.83", features = [
  "CredentialsContainer",
  "CredentialRequestOptions",
  "PublicKeyCredential",
  "CredentialCreationOptions",
  "PublicKeyCredentialCreationOptions",
  "PublicKeyCredentialRequestOptions",
  "PublicKeyCredentialParameters",
  "PublicKeyCredentialDescriptor",
  "PublicKeyCredentialType",
  "AuthenticatorSelectionCriteria",
  "AuthenticatorAttachment",
  "UserVerificationRequirement",
  "Window",
  "Navigator",
  "AuthenticatorResponse",
  "AuthenticatorAttestationResponse",
  "AuthenticatorAssertionResponse",
  "Location",
], optional = true }
base64-url = { version = "3.0.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }


[features]
default = ["web"]
web = [
  "uuid/js",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "js-sys",
  "web-sys",
  "base64-url",
]
