[package]
name = "keystr-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
thiserror.workspace = true
bs = { path = "../../../../clones/bs/crates/bs" }
bs-traits = { path = "../../../../clones/bs/crates/bs-traits" }
multicodec = { path = "../../../../clones/bs/crates/multicodec" }
multikey = { path = "../../../../clones/bs/crates/multikey" }
multihash = { path = "../../../../clones/bs/crates/multihash" }
multicid = { path = "../../../../clones/bs/crates/multicid" }
multisig = { path = "../../../../clones/bs/crates/multisig" }
provenance-log = { path = "../../../../clones/bs/crates/provenance-log" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
log = "0.4.21"
base64 = "0.22.1"
rand = "0.8"
ed25519-dalek = "2.1"
rand_core_6 = { package = "rand_core", version = "0.6" }

# optional for web feature only 
wasm-bindgen = { version = "0.2.92", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
js-sys = { version = "0.3.69", optional = true }
web-sys = { version = "0.3.83", features = [
  "CredentialsContainer",
  "CredentialRequestOptions",
  "PublicKeyCredential",
  "CredentialCreationOptions",
  "PublicKeyCredentialCreationOptions",
  "PublicKeyCredentialRequestOptions",
  "PublicKeyCredentialParameters",
  "PublicKeyCredentialDescriptor",
  "PublicKeyCredentialType",
  "PublicKeyCredentialRpEntity",
  "PublicKeyCredentialUserEntity",
  "AuthenticatorSelectionCriteria",
  "AuthenticatorAttachment",
  "UserVerificationRequirement",
  "AttestationConveyancePreference",
  "ResidentKeyRequirement",
  "Window",
  "Navigator",
  "AuthenticatorResponse",
  "AuthenticatorAttestationResponse",
  "AuthenticatorAssertionResponse",
  "Location",
], optional = true }
base64-url = { version = "3.0.2", optional = true }
getrandom = { workspace = true, optional = true }

[features]
default = ["web"]
web = [
  "uuid/js",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "js-sys",
  "web-sys",
  "base64-url",
  "getrandom/wasm_js",
]
