[package]
name = "keystr-client"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
tracing.workspace = true
thiserror.workspace = true
bs.workspace = true
bs-traits.workspace = true
multicodec.workspace = true
multikey.workspace = true
multihash.workspace = true
multicid.workspace = true
multisig.workspace = true
provenance-log.workspace = true
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
log = "0.4.21"
base64 = "0.22.1"
rand = "0.8"
ed25519-dalek = "2.1"
rand_core_6 = { package = "rand_core", version = "0.6" }
sha2 = "0.10.9"

# optional for web feature only 
wasm-bindgen = { version = "0.2.92", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
js-sys = { version = "0.3.69", optional = true }
web-sys = { version = "0.3.83", features = [
  "CredentialsContainer",
  "CredentialRequestOptions",
  "PublicKeyCredential",
  "CredentialCreationOptions",
  "PublicKeyCredentialCreationOptions",
  "PublicKeyCredentialRequestOptions",
  "PublicKeyCredentialParameters",
  "PublicKeyCredentialDescriptor",
  "PublicKeyCredentialType",
  "PublicKeyCredentialRpEntity",
  "PublicKeyCredentialUserEntity",
  "AuthenticatorSelectionCriteria",
  "AuthenticatorAttachment",
  "UserVerificationRequirement",
  "AttestationConveyancePreference",
  "ResidentKeyRequirement",
  "Window",
  "Navigator",
  "AuthenticatorResponse",
  "AuthenticatorAttestationResponse",
  "AuthenticatorAssertionResponse",
  "Location",
], optional = true }
base64-url = { version = "3.0.2", optional = true }
getrandom = { workspace = true, optional = true }

[features]
default = ["web"]
web = [
  "uuid/js",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "js-sys",
  "web-sys",
  "base64-url",
  "getrandom/wasm_js",
]
