[package]
name = "static"
version = "0.1.0"
authors = ["Doug Anderson444 <douganderson444@gmail.com>"]
edition = "2021"
rust-version.workspace = true

[dependencies]
dioxus = { version = "0.7.3" }
keystr-client.workspace = true
bs.workspace = true
multicodec.workspace = true
multicid.workspace = true
multihash.workspace = true
provenance-log.workspace = true
getrandom = { workspace = true, features = ["wasm_js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location", "Document", "Element", "HtmlTextAreaElement"] }
gloo-storage = "0.3.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
